# redstone_dart

./: .gitignore  .mcp.json  CLAUDE.md  DUAL_RUNTIME_PLAN.md  LICENSE  README.md  analysis_options.yaml  dart_mc_bridge_spec.md  dart_vm_embedding_research.md  essay_with_spacing.txt  justfile
.claude/skills/minecraft-e2e-test/: SKILL.md
.github/workflows/: test.yml
dart_mc_bridge/: README.md  build.gradle.kts  settings.gradle.kts
dart_mc_bridge/cli/: pubspec.yaml
dart_mc_bridge/cli/lib/src/: hot_reload.dart  process_runner.dart
dart_mc_bridge/dart_mod/: analysis_options.yaml  pubspec.yaml
dart_mc_bridge/dart_mod/lib/: dart_mod.dart
dart_mc_bridge/native/: CMakeLists.txt  test_dart_init.cpp  test_mod.dart  test_script.dart  test_with_callbacks.cpp
dart_mc_bridge/native/dart_mod_lib/api/: player.dart  world.dart
dart_mc_bridge/native/dart_mod_lib/src/: events.dart
dart_mc_bridge/native/src/: callback_registry.h  dart_bridge.cpp  dart_bridge.h  generic_jni.cpp  generic_jni.h  jni_interface.cpp  object_registry.cpp  object_registry.h
dart_mc_bridge/scripts/: setup_deps.sh
docs/: flutter-cache-architecture.md  metal-minecraft-integration-spec.md
example/basic_dart_mod/: analysis_options.yaml  pubspec.yaml
example/basic_dart_mod/lib/: main.dart
example/basic_dart_mod/minecraft/: build.gradle
example/basic_dart_mod/test/: entity_test.dart  events_test.dart  player_test.dart
example/example_mod/: pubspec.yaml  redstone.yaml
example/example_mod/lib/: main.dart  main_datagen.dart
example/example_mod/minecraft/: build.gradle
example/minecraft_flutter_dev/: README.md  pubspec.yaml  redstone.yaml
example/minecraft_flutter_dev/minecraft/: build.gradle  gradle.properties
myfirstmod/: .gitignore  CLAUDE.md  justfile
nocterm_minecraft/lib/: nocterm_minecraft.dart
nocterm_minecraft/lib/src/: headless_backend.dart
tools/: downscale_texture.py
(+213 files in other folders)
